# pico-beken

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  handlers.cpp  main.cpp
src/commands/: CMakeLists.txt  beken_flash.cpp  bootloader_crc.h  commands.h
src/shell/: Console.cpp
